chore: add validation for text input

--- a/src/index.css
+++ b/src/index.css
@@ -190,7 +190,7 @@ input:focus {
 .message {
   padding-top: 10px;
   text-align: center;
-  color: rebeccapurple;
+  color: #ff6a95;
 }
 
 /* FIX: Remove position: absolute to keep about icon at the bottom of the
