--- a/src/index.css
+++ b/src/index.css
@@ -236,3 +236,33 @@ input:focus {
     width: 80%;
   }
 }
+
+/* css loader */
+.custom-loader {
+  width: 70px;
+  height: 70px;
+  background:
+    radial-gradient(farthest-side,#FF6995 90%,#0000) center/16px 16px,
+    radial-gradient(farthest-side,#911F4C   90%,#0000) bottom/12px 12px;
+  background-repeat: no-repeat;
+  animation: s7 2s infinite linear;
+  position: relative;
+}
+.custom-loader::before {    
+  content:"";
+  position: absolute;
+  width:8px;
+  height:8px;
+  inset:auto 0 16px;
+  margin: auto;
+  background:#4BED97;
+  border-radius: 50%;
+  transform-origin: 50% calc(100% + 10px);
+  animation:inherit;
+  animation-duration: 1s;
+}
+
+
+@keyframes s7 { 
+  100%{transform: rotate(1turn)}
+}
